--- a/src/Display.css
+++ b/src/Display.css
@@ -1,26 +1,21 @@
-.overlay {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-color: rgba(0, 0, 0, 0.7);
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-    z-index: 1000;
-  }
-  
-  .close-btn {
+.container .close-btn {
     position: absolute;
     top: 10px;
-    right: 10px;
-    background-color: #fff;
+    right: 50px;
+    background-color: #bcbcbc;
     border: none;
     border-radius: 50%;
     width: 30px;
-    height: 30px;
+    height: 60px;
     font-weight: bold;
     cursor: pointer;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    transition: background-color 0.3s;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+  }
+  
+  .container .close-btn:hover {
+    background-color: #005ea6;
   }
