--- a/src/FilterPanel.css
+++ b/src/FilterPanel.css
@@ -13,6 +13,7 @@
   
   .filter-list li:hover {
     background-color: #f0f0f0;
+    transition: background-color 0.3s;
   }
   
   .filter-list li.selected {
